# EICViBE

./: .gitignore  AGENTS.md  PYDANTIC_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  index.md
docs/_static/: custom.css
docs/api/: index.md  machine_portal.md
docs/guides/: element_selection.md  index.md  lattice_design.md  madx_integration.md  matched_beams.md  matched_beams_quick_reference.md  simulation_engines.md
examples/: bend_geometry_demo.py  enhanced_bpm_tracking_test.ipynb  three_mode_demo.py  three_mode_physics_engine_demo.ipynb
examples/EIC_RCS/: RCSV4S0.twiss
examples/FODO/: FODO_lattice_change.ipynb  lattice_change_demo.py  test_FODO_lattice.ipynb
src/eicvibe/: __init__.py
src/eicvibe/machine_portal/: __init__.py  bend.py  crabcavity.py  drift.py  element.py  elements.yaml  kicker.py  lattice.py  lattice_change.py  marker.py  monitor.py  octupole.py  parameter_group.py  parameters.yaml  quadrupole.py  rbend.py  rfcavity.py  sextupole.py
src/eicvibe/models/: __init__.py  base.py  parameter_groups.py  validators.py
src/eicvibe/optics/: README.md  __init__.py  twiss.py
src/eicvibe/simulators/: __init__.py  base.py  base.py.backup  interface.yaml  registry.py  types.py  xsuite_interface.py  (+1 more)
tests/: RCSV4S0.madx  RCSV4S0.seq  RCSV4S0.twiss  test_element.ipynb  test_import_madx.ipynb  test_lattice.ipynb  test_parametergroup.ipynb  test_pydantic_elements.py  test_pydantic_foundation.py  test_pydantic_lattice.py  test_pydantic_parameter_groups.py  test_simulation_modes.py  test_xsuite_fodo.py
(+8 files in other folders)
