[project]
name = "EICViBE"
version = "0.1.0"
description = "EIC Virtual Beam Enviroment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pytest>=8.4.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
eicvibe = "eicvibe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
